--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,11 @@
-$light-background: #fff;
+$primary-color: #4793ff;
+$lite-background: #fff;
+$lite-color: #000;
+$base-color: #939cb0;
+$color-base: $base-color;
 $box-shadow: 2px 5px 25px -3px rgba(180, 180, 18, 0.25);
 $border-radius: 20px;
+$card-padding: 10px;
+$font-size-base: 14px;
+$font-size-large: 18px;
+$font-size-small: 13px;
