--- a/src/pages/Home/components/ThisDay/ThisDay.module.scss
+++ b/src/pages/Home/components/ThisDay/ThisDay.module.scss
@@ -4,7 +4,36 @@
   padding: 20px;
   max-width: 400px;
   width: 100%;
-  background: $light-background;
+  background: $lite-background;
   box-shadow: $box-shadow;
   border-radius: $border-radius;
+}
+
+.top__block {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 30px;
+  svg {
+    width: 119px;
+    height: 119px;
+  }
+  .this__temp {
+    font-size: 96px;
+    font-weight: 500;
+    color: $primary-color;
+  }
+  .this__day_name {
+    font-size: 40px;
+    color: $lite-color;
+  }
+}
+
+.bottom__block {
+  .this__time,
+  .this__city {
+    font-size: 25px;
+    color: $base-color;
+  }
 }
