--- a/src/shared/Popup/Popup.module.scss
+++ b/src/shared/Popup/Popup.module.scss
@@ -11,9 +11,9 @@
   padding: 40px;
   max-width: 750px;
   width: 100%;
-  background: $lite-background;
+  background: $light-background;
   box-shadow: $box-shadow;
-  border-radius: $border-radius;
+  border-radius: 20px;
 }
 .blur {
   position: absolute;
