--- a/src/pages/Home/Days/Days.module.scss
+++ b/src/pages/Home/Days/Days.module.scss
@@ -6,17 +6,17 @@
   flex-wrap: wrap;
   padding: 20px;
   width: 100%;
-  background: $lite-background;
+  background-color: var(#{--components-background-default});
   box-shadow: $box-shadow;
-  border-radius: 0 0 $border-radius $border-radius;
+  border-radius: 0 0 10px 10px;
 }
 
 .card {
   display: flex;
   flex-direction: column;
-  background: rgba(71, 147, 255, 0.2);
+  background-color: var(#{--card-background-default});
   border-radius: 10px;
-  padding: $card-padding;
+  padding: 10px;
   width: 149px;
   transition: 0.3s;
   cursor: pointer;
@@ -25,16 +25,17 @@
   .day__info,
   .temp__night,
   .info {
-    color: $color-base;
+    color: $base-color;
   }
 
-  .day {
+  .day__name {
     margin-bottom: 7px;
-    font-size: $font-size-large;
+    font-size: 18px;
+    color: var(#{--text-color-default});
   }
 
   .day__info {
-    font-size: $font-size-base;
+    font-size: 14px;
     margin-bottom: 12px;
   }
 
@@ -43,21 +44,21 @@
   }
 
   .temp__day {
-    font-size: $font-size-large;
-    color: inherit;
+    font-size: 18px;
+    color: var(#{--text-color-default});
   }
 
   .temp__night {
-    font-size: $font-size-small;
+    font-size: 13px;
     margin-bottom: 6px;
   }
 
   .info {
-    font-size: $font-size-small;
+    font-size: 13px;
   }
 
   &:hover {
-    box-shadow: 0px 3px 20px rgba(147, 144, 144, 0.28);
+    box-shadow: var(#{--card-shadow-default});
   }
 }
 
@@ -72,9 +73,9 @@
   box-shadow: 2px 5px 25px -3px rgba(180, 180, 180, 0.25);
   border-radius: 5px;
   padding: 9px 20px;
-  background-color: $lite-background;
+  background-color: var(#{--components-background-default});
   margin-right: 15px;
-  color: $lite-color;
+  color: var(#{--text-color-default});
   font-size: 18px;
   display: flex;
   align-items: center;
