--- a/src/pages/Home/components/ThisDayInfo/ThisDayInfo.module.scss
+++ b/src/pages/Home/components/ThisDayInfo/ThisDayInfo.module.scss
@@ -5,9 +5,9 @@
   padding: 40px;
   max-width: 750px;
   width: 100%;
-  background: $lite-background;
+  background: var(#{--components-background-default});
   box-shadow: $box-shadow;
-  border-radius: $border-radius;
+  border-radius: 10px;
 }
 
 .item {
@@ -40,7 +40,7 @@
     color: $base-color;
   }
   .indicator__value {
-    color: $lite-color;
+    color: var(#{--text-color-default});
   }
 }
 
