--- a/src/shared/Header/Header.module.scss
+++ b/src/shared/Header/Header.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables.scss';
+
 .header {
   display: flex;
   align-items: center;
@@ -14,6 +16,7 @@
 .change_theme,
 .logo {
   margin-right: 20px;
+  cursor: pointer;
 }
 
 .logo {
@@ -28,4 +31,5 @@
   text-transform: uppercase;
   font-weight: bold;
   font-size: 25px;
+  color: $primary-color;
 }
