--- a/src/pages/Home/Days/Days.module.scss
+++ b/src/pages/Home/Days/Days.module.scss
@@ -4,11 +4,12 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 20px;
+  padding: 20px 50px;
   width: 100%;
   background-color: var(#{--components-background-default});
   box-shadow: $box-shadow;
   border-radius: 0 0 10px 10px;
+  margin-bottom: 30px;
 }
 
 .card {
@@ -16,8 +17,8 @@
   flex-direction: column;
   background-color: var(#{--card-background-default});
   border-radius: 10px;
-  padding: 10px;
-  width: 149px;
+  padding: 20px;
+  width: 150px;
   transition: 0.3s;
   cursor: pointer;
 
