--- a/src/shared/Popup/Popup.module.scss
+++ b/src/shared/Popup/Popup.module.scss
@@ -9,14 +9,16 @@
   align-items: center;
   justify-content: space-between;
   padding: 40px;
-  max-width: 750px;
+  max-width: 760px;
   width: 100%;
-  background: $light-background;
+  background: var(#{--components-background-default});
   box-shadow: $box-shadow;
   border-radius: 20px;
 }
 .blur {
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
   z-index: 1000;
   width: 100%;
   height: 100%;
