--- a/src/pages/Home/Days/Days.module.scss
+++ b/src/pages/Home/Days/Days.module.scss
@@ -1,4 +1,5 @@
-@import '../../../styles/variables.scss';
+@use '../../../styles/variables' as *;
+@use '../../../styles/mixins-media' as *;
 
 .days {
   display: flex;
@@ -9,7 +10,11 @@
   background-color: var(#{--components-background-default});
   box-shadow: $box-shadow;
   border-radius: 0 0 10px 10px;
-  margin-bottom: 30px;
+
+  @include sm {
+    margin-bottom: 0 10px;
+    padding: 10px 20px;
+  }
 }
 
 .card {
@@ -21,6 +26,13 @@
   width: 150px;
   transition: 0.3s;
   cursor: pointer;
+
+  @include sm {
+    width: 48%;
+    padding: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
 
   .day,
   .day__info,
@@ -82,7 +94,6 @@
   align-items: center;
   justify-content: center;
   margin-right: 15px;
-  cursor: pointer;
 }
 
 .cancel {
