--- a/src/pages/Home/components/ThisDayInfo/ThisDayInfo.module.scss
+++ b/src/pages/Home/components/ThisDayInfo/ThisDayInfo.module.scss
@@ -1,4 +1,5 @@
-@import '../../../../styles/variables.scss';
+@use '../../../../styles/variables' as *;
+@use '../../../../styles/mixins-media' as *;
 
 .this__day_info {
   position: relative;
@@ -8,6 +9,14 @@
   background: var(#{--components-background-default});
   box-shadow: $box-shadow;
   border-radius: 10px;
+
+  @include sm {
+    flex-direction: column; /* Переводим элементы в колонку */
+    display: block;
+    padding: 20px;
+    max-width: 100%;
+    margin-top: 10px;
+  }
 }
 
 .item {
@@ -48,4 +57,8 @@
   position: absolute;
   top: 0;
   right: 0;
+
+  @include sm {
+    width: 200px;
+  }
 }
