--- a/src/shared/Header/Header.module.scss
+++ b/src/shared/Header/Header.module.scss
@@ -1,4 +1,5 @@
-@import '../../styles/variables.scss';
+@use '../../styles/variables' as *;
+@use '../../styles/mixins-media' as *;
 
 .header {
   display: flex;
@@ -6,24 +7,45 @@
   justify-content: space-between;
   width: 100%;
   margin-bottom: 30px;
+
+  @include sm {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
 }
 
 .wrapper {
   display: flex;
   align-items: center;
+
+  @include sm {
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
 }
 
 .change_theme,
 .logo {
   margin-right: 20px;
   cursor: pointer;
+
+  @include sm {
+    margin-right: 0;
+  }
 }
 
 .logo {
   margin-right: 20px;
   svg {
-    width: 65px;
-    height: 65px;
+    width: 45px;
+    height: 45px;
+  }
+
+  @include sm {
+    margin-bottom: 5px;
   }
 }
 
@@ -32,4 +54,9 @@
   font-weight: bold;
   font-size: 25px;
   color: $primary-color;
+
+  @include sm {
+    text-align: center;
+    margin-bottom: 10px;
+  }
 }
