--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
+@use 'mixins-media' as *;
+@use 'variables.scss' as *;
 @import '/node_modules/normalize.css/normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
@@ -17,4 +19,10 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   padding-top: 20px;
+  padding-bottom: 20px;
+
+  @include sm {
+    padding: 20px 30px;
+    margin: 0 auto;
+  }
 }
