--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,9 @@
+$xl: 1200px;
+$lg: 992px;
+$md: 768px;
+$sm: 576px;
+$xs: 400px;
+
 $primary-color: #4793ff;
 $light-background: #fff;
 $box-shadow: 2px 5px 25px -3px rgba(180, 180, 180, 0.25);
